Cargo.toml change

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 license = "MIT"
 description = "A simple greeter for your terminal that can give you useful info before you embark on a programming journey"
 homepage = "https://github.com/henry-lang/greeter"
-documentation = "N/A"
+documentation = "https://github.com/henry-lang/greeter"
 repository = "https://github.com/henry-lang/greeter"
 readme = "README.md"
 
