--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,9 @@ repository = "https://github.com/henry-lang/greeter"
 readme = "README.md"
 
 [dependencies]
+chrono = "0.4.19"
+home = "0.5.3"
+reqwest = {version = "0.11.10", features = ["blocking", "json"]}
+serde = {version = "1.0.137", features = ["derive"]}
+serde_json = "1.0.81"
+username = "0.2.0"
